add new website from server na

--- a/xem-phim-moi/nhung-ga-trai-hu-choi-hay-bi-xoi/index.html
+++ b/xem-phim-moi/nhung-ga-trai-hu-choi-hay-bi-xoi/index.html
@@ -1199,7 +1199,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1789,40 +1789,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/than-cho-tan-cong" title="Thần chó tấn công">
+          <a class="list-top-movie-link" href="/phim-moi/chao-ninja-phan-3" title="Chào Ninja (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/than-cho-tan-cong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chao-ninja-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thần chó tấn công
+             Chào Ninja (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             God dog attack
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thien-thinh-truong-ca" title="Thiên Thịnh Trường Ca">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thien-thinh-truong-ca-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thiên Thịnh Trường Ca
-            </span>
-            <span class="list-top-movie-item-en">
-             The Rise of Phoenixes
+             Hello Ninja (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1833,65 +1811,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ao-thuat-gia-dau-tri" title="Ảo Thuật Gia Đấu Trí">
+          <a class="list-top-movie-link" href="/phim-moi/blade-of-dawn" title="Blade of Dawn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ao-thuat-gia-dau-tri-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/blade-of-dawn-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ảo Thuật Gia Đấu Trí
+             Blade of Dawn
             </span>
             <span class="list-top-movie-item-en">
-             The Prestige
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/fast-furious-4" title="Fast &amp; Furious 4">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/fast-and-furious-4-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Fast &amp; Furious 4
-            </span>
-            <span class="list-top-movie-item-en">
-             Fast &amp; Furious
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoi-nguoi-nghien-goi-dau" title="Hội Người Nghiện Gội Đầu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-nguoi-nghien-goi-dau-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hội Người Nghiện Gội Đầu
-            </span>
-            <span class="list-top-movie-item-en">
-             Miss Shampoo
+             The Sword Of Dawn
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vuong-quoc-dong-vat-phan-3" title="Vương quốc động vật (Phần 3)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vuong-quoc-dong-vat-phan-3-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vương quốc động vật (Phần 3)
+            </span>
+            <span class="list-top-movie-item-en">
+             Animal Kingdom (Season 3)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cau-chuyen-do-choi-4" title="Câu Chuyện Đồ Chơi 4">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-chuyen-do-choi-4-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Câu Chuyện Đồ Chơi 4
+            </span>
+            <span class="list-top-movie-item-en">
+             Toy Story 4
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/lien-quan-vu-tru" title="Liên Quân Vũ Trụ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lien-quan-vu-tru-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Liên Quân Vũ Trụ
+            </span>
+            <span class="list-top-movie-item-en">
+             One Hundred Thousand Bad Jokes 2
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
