add new website from server na

--- a/xem-phim-moi/nhung-ga-trai-hu-choi-hay-bi-xoi/index.html
+++ b/xem-phim-moi/nhung-ga-trai-hu-choi-hay-bi-xoi/index.html
@@ -1199,7 +1199,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1789,21 +1789,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chao-ninja-phan-3" title="Chào Ninja (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/arlington-road" title="Arlington Road">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chao-ninja-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/arlington-road-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chào Ninja (Phần 3)
+             Arlington Road
             </span>
             <span class="list-top-movie-item-en">
-             Hello Ninja (Season 3)
+             Arlington Road
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1811,62 +1811,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/blade-of-dawn" title="Blade of Dawn">
+          <a class="list-top-movie-link" href="/phim-moi/co-be-quang-khan-do" title="Cô Bé Quàng Khăn Đỏ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/blade-of-dawn-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-be-quang-khan-do-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Blade of Dawn
+             Cô Bé Quàng Khăn Đỏ
             </span>
             <span class="list-top-movie-item-en">
-             The Sword Of Dawn
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vuong-quoc-dong-vat-phan-3" title="Vương quốc động vật (Phần 3)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vuong-quoc-dong-vat-phan-3-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Vương quốc động vật (Phần 3)
-            </span>
-            <span class="list-top-movie-item-en">
-             Animal Kingdom (Season 3)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cau-chuyen-do-choi-4" title="Câu Chuyện Đồ Chơi 4">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-chuyen-do-choi-4-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Câu Chuyện Đồ Chơi 4
-            </span>
-            <span class="list-top-movie-item-en">
-             Toy Story 4
+             Hoodwinked Too! Hood VS. Evil
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1877,18 +1833,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lien-quan-vu-tru" title="Liên Quân Vũ Trụ">
+          <a class="list-top-movie-link" href="/phim-moi/linh-hon-bup-be-3" title="Linh Hồn Búp Bê 3">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lien-quan-vu-tru-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-hon-bup-be-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Liên Quân Vũ Trụ
+             Linh Hồn Búp Bê 3
             </span>
             <span class="list-top-movie-item-en">
-             One Hundred Thousand Bad Jokes 2
+             The Doll 3
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-pho-an-thit-nguoi" title="Thành Phố Ăn Thịt Người">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-pho-an-thit-nguoi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thành Phố Ăn Thịt Người
+            </span>
+            <span class="list-top-movie-item-en">
+             Remains
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dua-ong-xa-quoc-dan-ve-nha-phan-3" title="Đưa Ông Xã Quốc Dân Về Nhà (Phần 3)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dua-ong-xa-quoc-dan-ve-nha-phan-3-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đưa Ông Xã Quốc Dân Về Nhà (Phần 3)
+            </span>
+            <span class="list-top-movie-item-en">
+             National Husband Bring Home (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
